# PianoCheetah

./: .gitignore  README.md  _mani  _manif  _manif.dbg  _rel  app.pianocheetah.pianocheetah.json  b  b.sh  bDbg.sh  c  cpp  do.txt  doc.txt  fb  fp  fpak  fpak.dbg  mani  pcheetah_20220514-1_amd64.deb  rel  rk.php  rr.php  s  stv
__release/pcheetah_20220530-1_amd64/DEBIAN/: control
__release/pcheetah_20220530-1_amd64/opt/app/pcheetah/: midimp
_doc/: doc.txt
_fpak/: app.pianocheetah.pianocheetah.json
_fpak/share/metainfo/: app.pianocheetah.pianocheetah.metainfo.xml
_meta/share/applications/: app.pianocheetah.midicfg.desktop
delsame/: CMakeLists.txt  main.cpp
docs/: README.md  did.txt  do.txt
initme/: CMakeLists.txt  initme.cpp  initme.h  initme.ui
initme/rc/: initme.ui
ll/: CMakeLists.txt  main.cpp
mid2song/: CMakeLists.txt  main.cpp
midicfg/: CMakeLists.txt  main.cpp  midicfg.cpp  midicfg.h  midicfg.ui
midicfg/rc/: midicfg.ui  rc.qrc
midimp/: CMakeLists.txt  main.cpp
mod2song/: CMakeLists.txt  main.cpp
pcheetah/: CMakeLists.txt  ctlNt.cpp  ctlNt.h  dlg.cpp  dlgCfg.cpp  dlgChd.cpp  dlgCtl.cpp  dlgCue.cpp  dlgFL.cpp  dlgFng.cpp  dlgHlp.cpp  dlgKSg.cpp  dlgMov.cpp  dlgTDr.cpp  dlgTSg.cpp  dlgTpo.cpp  dlgcfg.ui  dlgcue.ui  dlgfl.ui  dlgtdr.ui  glo.h  main.cpp  pcheetah.cpp  pcheetah.h  pcheetah.ui  sChd.cpp  sChrd.cpp  sCmd.cpp  sDevTyp.cpp  sDevice.cpp  sDump.cpp  sEdMs.cpp  sEdit.cpp  sFile.cpp  sNote.cpp  sReDo.cpp  sRecord.cpp  sTime.cpp  sUtil.cpp  song.cpp  (+1 more)
pcheetah/_l8r/: dlgchd.cpp  upd.cpp
pcheetah/rc/: dlgcfg.ui  dlgchd.ui  dlgctl.ui  dlgfng.ui  dlghlp.ui  dlgksg.ui  dlgmov.ui  dlgtdr.ui  dlgtpo.ui  dlgtsg.ui  pcheetah.ui  rc.qrc
pcheetah_20220514-1_amd64/DEBIAN/: control
pcheetah_20220514-1_amd64/opt/app/pcheetah/: ll  midicfg  pcheetah  txt2song
pianocheetah/: CMakeLists.txt  ctlNt.cpp  ctlNt.h  dlg.cpp  glo.h  pcheetah.cpp  pcheetah.h  sChd.cpp  sCmd.cpp  sDevTyp.cpp  sDevice.cpp  sDump.cpp  sEdMs.cpp  sEdit.cpp  sFile.cpp  sNote.cpp  sReDo.cpp  sRecord.cpp  sTime.cpp  sUtil.cpp  song.cpp  song.h
pianocheetah/rc/: dlgcfg.ui  dlgctl.ui  dlgcue.ui  dlgfl.ui  dlgfng.ui  dlghlp.ui  dlgmov.ui  dlgqua.ui  pcheetah.ui  rc.qrc
sfz2syn/: CMakeLists.txt  main.cpp
song2wav/: CMakeLists.txt  devtyp.h  sLoad.cpp  sTime.cpp  song2wav.cpp  song2wav.h
syn/: CMakeLists.txt  main.cpp  synz.cpp
syn/rc/: syn.rc
synsnd/: CMakeLists.txt  main.cpp  stv
ta/: CMakeLists.txt  main.cpp
txt2song/: CMakeLists.txt  main.cpp
unsfz/: CMakeLists.txt  main.cpp
update/: CMakeLists.txt  update.cpp  update.h  update.ui
wavplay/rc/: WavPlayer.rc
zEtc/: README.md
zEtc/Lazr/: Lazr.cpp
zEtc/Lazr/rc/: Lazr.aps  Lazr.rc  resource.h
zEtc/ReChord/: ReChord.cpp  ReChord.rc
zEtc/RepRpt/rc/: resource.h
zEtc/Song2Mid/: Song2Mid.cpp
zEtc/Song2Wav/: Song2Wav.cpp  SongTime.cpp
zEtc/Song2Wav/rc/: Song2Wav.rc  resource.h
zEtc/Sty2Clip/: Sty2Clip.cpp.newStab
zEtc/Sty2Clip/rc/: Sty2Clip.rc  resource.h
zEtc/Sty2Song/: Sty2Song.cpp
zEtc/UnDLS/: UnDLS.cpp  __dlsLst.cpp  __riffLst.cpp
zEtc/UnSF2/: SoundFont 2.01 genlist1.txt  UnSF2.cpp
zEtc/UnSF2/rc/: UnSF2.rc  resource.h
zEtc/UnSYX/: UnSYX.cpp
zEtc/UnSYX/rc/: UnSYX.rc  resource.h
zEtc/UnXI/: UnXI.rc  resource.h
zEtc/WavPlayer/: WavPlayer.cpp
zEtc/Waver/: CtlWave.cpp  Wave.cpp  Waver.h
zEtc/Waver/rc/: resource.h
zL8r/BIAB2Song/: BIAB2Song.cpp
zL8r/Lazr/rc/: gui_manifest.xml
zL8r/Mid2Txt/: Mid2Txt.cpp
zL8r/RepRpt/: RepRpt.cpp
zL8r/RepRpt/rc/: RepRpt.rc
zL8r/SongDL/: SongDL.cpp
zL8r/SongDL/rc/: SongDL.rc
zL8r/SynSound/rc/: SynSound.rc  resource.h
zL8r/UnMOD/: UnMOD.cpp  mod.txt
zL8r/UnSFZ/rc/: resource.h
zL8r/UnXI/: UnXI.cpp
zL8r/WavPlayer/rc/: resource.h
zL8r/Waver/: Waver.cpp
zL8r/chordinfo/: Arp.cpp  ChordType.txt  RandSong_old.cpp
zL8r/oldcode/Lazr/: Lazr - Copy.cpp
zL8r/oldcode/ReChord/: resource.h
zL8r/oldcode/Song2Wav/: DevTyp.cpp  Song2Wav.h
zL8r/oldcode/SongDL/rc/: resource.h
zL8r/oldcode/Sty2Clip/: hmmm.txt
zL8r/oldcode/SynSound/: SynSound.cpp
zL8r/oldcode/UnSFZ/: UnSFZ.cpp
zL8r/oldcode/UnSFZ/rc/: UnSFZ.rc
zL8r/oldcode/Waver/rc/: Waver.rc
zL8r/oldcode/syn/rc/: resource.h
zL8r/sounder/: sounder.cpp
zRel/: pcheetah_20220530-1_amd64.deb
zRel/kub/opt/app/pcheetah/: mid2song  midicfg  pcheetah
zRel/kub/usr/share/applications/: midicfg.desktop  pcheetah.desktop
zRel/rpi/opt/app/pcheetah/: PianoCheetah.desktop  ll  midicfg  pcheetah  txt2song
zRel/rpi/usr/share/applications/: initme.desktop  pcheetah.desktop
zRelease/: pcheetah_20220530-1_armhf.deb
zRelease/pcheetah_20220530-1_amd64/opt/app/pcheetah/: delsame
zRelease/pcheetah_20220530-1_armhf/DEBIAN/: control
zRelease/pcheetah_20220530-1_armhf/opt/app/pcheetah/: MidiCfg.desktop  delsame  mid2song  midimp
